Added call requests page.

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,13 @@
 				<button>Orders</button>
 			</a> 
  </div>   
+
+ </form>
+ <div class='middle'>
+			<a href="https://whatsapp-bot.invtrdan.repl.co/CallRequests">
+				<button>Call Requests</button>
+			</a> 
+ </div>   
  
 </body>
 </html>
