--- a/templates/call_requests.html
+++ b/templates/call_requests.html
@@ -7,10 +7,16 @@
   <title>Call Requests</title>
 </head>
 <body>
-
+  
+<div align="center">
+  <br><br><br>
+<form method=post>
+ 
   <h1>Call Requests</h1>
 
   </form>
+
+  <br><br><br>
   <div class='middle'>
        <a href="https://whatsapp-bot.invtrdan.repl.co/">
          <button>Home</button>
