--- a/templates/home.html
+++ b/templates/home.html
@@ -7,10 +7,15 @@
     <title>Home</title>
 </head>
 <body>
-  
- <h1>Home</h1>
-  
+   
+<div align="center">
+  <br><br><br>
+<form method=post>
+
+<h1>Home</h1> 
+
  </form>
+
  <div class='middle'>
 			<a href="https://whatsapp-bot.invtrdan.repl.co/orders">
 				<button>Orders</button>
