--- a/templates/new_order.html
+++ b/templates/new_order.html
@@ -7,10 +7,24 @@
   <title>New Order</title>
 </head>
 <body>
+  
+<div align="center">
+  <br><br><br>
+<h1>New Order</h1>
 
-  <h1>New Order</h1>
-
+  <form method=post>
+    <label for="name">Name:</label>
+    <input type="text" id="name", name="name"><br><br>
+    <label for="number">Phone Number:</label>
+    <input type="text" id="nubmer", name="number"><br><br>
+    <label for="order_number">Order Number:</label>
+    <input type="text" id="order_number", name="order_number"><br><br>
+    <label for="order">Order:</label>
+    <input type="text" id="order", name="order"><br><br>
+    <button type="submit">Submit Order</button>
   </form>
+  
+  <br>
   <div class='middle'>
        <a href="https://whatsapp-bot.invtrdan.repl.co/">
          <button>Home</button>
