--- a/templates/orders.html
+++ b/templates/orders.html
@@ -8,9 +8,14 @@
 </head>
 <body>
   
+<div align="center">
+  <br><br><br>
+<form method=post>
+   
  <h1>Orders</h1>
   
  </form>
+
  <div class='middle'>
 			<a href="https://whatsapp-bot.invtrdan.repl.co/InProgress">
 				<button>Orders in Progress</button>
