--- a/templates/orders.html
+++ b/templates/orders.html
@@ -16,14 +16,14 @@
   
  </form>
 
- <div class='middle'>
+ <div class='center'>
 			<a href="https://whatsapp-bot.invtrdan.repl.co/InProgress">
 				<button>Orders in Progress</button>
 			</a> 
  </div> 
 
  </form>
- <div class='middle'>
+ <div class='center'>
 			<a href="https://whatsapp-bot.invtrdan.repl.co/NewOrder">
 				<button>New Order</button>
 			</a> 
