--- a/templates/orders_in_progress.html
+++ b/templates/orders_in_progress.html
@@ -7,13 +7,13 @@
   <title>Orders In Progress</title>
 </head>
 <body>
-
+<div align="center">
   <h1>Orders in Progress</h1>
 
    </form>
 
    <br><br><br>
-   <div class='middle'>
+   <div class='center'>
   			<a href="https://whatsapp-bot.invtrdan.repl.co/">
   				<button>Home</button>
   			</a> 
